css/main.css
html {
  background-color: #e2e2e2;
}

body {
  margin: 2em auto;
  max-width: 35em;

  background-color: #fff;
  border: 1px solid #ccc;
}

section {
  overflow: hidden;
  padding: 4em 1em;
  position: relative;

  border-bottom: 1px solid #ccc;
}

section:nth-child(5) {
  border: 0;
}

div {
  position: absolute;
  right: 1em;
  top: 0;
}

.box {
  height: 100px;
  top: calc(50% - 50px);
  width: 200px;

  background-color: limegreen;
  opacity: 0;
  transition: all .5s ease;
}

.show {
  opacity: 1;
}

.diamond {
  height: 80px;
  right: -100px;
  top: calc(50% - 40px);
  width: 80px;

  background-color: hotpink;
  transform: rotate(45deg);
  transition: all .5s ease;
}

.move {
  right: 50px;
}

.panel {
  max-height: 10em;
  overflow: hidden;
  top: 50%;
  width: 250px;

  background-color: yellow;
  transform: translateY(-50%);
  transition: all .5s ease;

  color: darkgoldenrod;
  text-align: center;
}

.collapse {
  max-height: 0;
}

.panel h2 {
  margin: 0;
  padding: 3rem 0;
}

.circle {
  height: 100px;
  top: calc(50% - 50px);
  width: 100px;

  background-color: orange;
  border-radius: 50%;
}

.bounce {
  animation: bounce .5s linear forwards;
}

@keyframes bounce {

  0% {
    transform: translate(0, 0);
  }

  25% {
    transform: translate(-25px, -20px);
  }

  50% {
    transform: translate(-50px, 0px);
  }

  75% {
    transform: translate(-75px, -20px);
  }

  100% {
    transform: translate(-100px, 0);
  }
}

.list {
  bottom: 1em;
  margin: 0;
  padding: 0;
  position: absolute;
  right: 1em;
  top: 1em;
  width: 250px;

  border: 1px solid #ccc;
  overflow: hidden;
  overflow-y: auto;
}

.list li {
  overflow: hidden;
  padding: 0 0.5em;
  max-height: 0;

  background-color: plum;
  border: 1px solid mediumpurple;
  overflow: hidden;

  color: mediumpurple;
  animation: li-show .5s linear forwards;
}

@keyframes li-show {

  0% {
    max-height: 0;
  }
  
  100% {
    max-height: 1.5em;
  }
}

